force-app/main/default/objects/Driver__c/Driver__c.object-meta.xml
<CustomObject>
    <description>Driver&apos;s parameters (First Name, Last Name, etc.).</description>
    <label>Driver</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Drivers ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>