force-app/main/default/objects/Driver__c/fields/Hat_Tricks__c.field-meta.xml
<CustomField>
    <fullName>Hat_Tricks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of won Races finished with the fastest lap and took 1st place.</description>
    <label>Hat Tricks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>