force-app/main/default/objects/Driver__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of the driver.</description>
    <inlineHelpText>Last Name of the driver.</inlineHelpText>
    <label>Last Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>