force-app/main/default/objects/Driver__c/validationRules/driver_18_age_only.validationRule-meta.xml
<ValidationRule>
    <fullName>driver_18_age_only</fullName>
    <active>true</active>
    <description>No drivers aged below 18 are allowed for race.</description>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>No drivers aged below 18 are allowed for race.</errorMessage>
</ValidationRule>