force-app/main/default/objects/Driver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Age__c</columns>
    <columns>Is_Qualified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>